--- a/aboutus.html
+++ b/aboutus.html
@@ -15,7 +15,7 @@
       <link href="assets/css/lightbox.css" rel="stylesheet"/>
     <link href="assets/css/style.css" rel="stylesheet"/>
   </head>
-  <body ng-app="thankam">
+  <body ng-app="slaeire">
       <div style="z-index:99999" class="container-fluid">
                       <div id="sm-menu" class="menu-sd">
                         <div class="row menu-top-smd">
