--- a/contactus.html
+++ b/contactus.html
@@ -15,7 +15,7 @@
       <link href="assets/css/lightbox.css" rel="stylesheet"/>
     <link href="assets/css/style.css" rel="stylesheet"/>
   </head>
-  <body ng-app="thankam">
+  <body ng-app="slaeire">
 
 
     <div id="fb-root"></div>
@@ -242,8 +242,8 @@
 
             <div class="fb-page" data-href="https://www.facebook.com/SlaEire/" data-tabs="" data-width="" data-height="" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true"><blockquote cite="https://www.facebook.com/SlaEire/" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/SlaEire/">Sri Lanka Association of Ireland - SlaÉire</a></blockquote></div>
 
-           </div>
-           
+       </div>
+
         </div>
  </div>
 
