--- a/movingtoirl.html
+++ b/movingtoirl.html
@@ -15,7 +15,7 @@
       <link href="assets/css/lightbox.css" rel="stylesheet"/>
     <link href="assets/css/style.css" rel="stylesheet"/>
   </head>
-  <body ng-app="thankam">
+  <body ng-app="slaeire">
       <div style="z-index:99999" class="container-fluid">
                       <div id="sm-menu" class="menu-sd">
                         <div class="row menu-top-smd">
@@ -197,7 +197,8 @@
 
                   </div>
                   <div class="col-sm-9">
-                       <b>Immigration</b>
+                       <b>Immigration -</b>
+                       <p></p>
                       <p>People from all over the world immigrate to Ireland. Whether you’re a student hoping
                         to get your next degree, a professional looking to take your career to the next level,
                         or are even thinking about making Ireland home for you and your family you will find the
@@ -233,7 +234,8 @@
 
 
                   <div class="col-sm-9">
-                       <b>Education</b>
+                       <b>Education -</b>
+                       <p></p>
                       <p>Although children are not obliged to attend school until the age of six, almost all children begin
                         school in the September following their fourth birthday. Nearly 40% of four-year-olds and almost all
                         five-year-olds are enrolled in infant classes in primary schools (sometimes called national schools).
@@ -273,7 +275,8 @@
 
                   </div>
                   <div class="col-sm-9">
-                       <b>Employment</b>
+                       <b>Employment -</b>
+                       <p></p>
                       <p>Whether you are currently in work, unemployed or in education, the process of finding and applying for
                         a job is the same. It is important to research all possible sources of information on employment
                         opportunities, to send in a well-prepared job application with a relevant cover letter and
@@ -302,7 +305,8 @@
 
 
                   <div class="col-sm-9">
-                       <b>Driving</b>
+                       <b>Driving -</b>
+                       <p></p>
                       <p>It is possible to exchange a driving licence issued by an EU member state or an EEA member state
                         (Norway, Liechtenstein and Iceland) for an Irish driving licence. It is also possible to exchange
                         a driving licence issued by certain recognised states for an Irish driving licence. If your driving
@@ -342,7 +346,8 @@
 
                   </div>
                   <div class="col-sm-9">
-                       <b>Accommodation</b>
+                       <b>Accommodation -</b>
+                       <p></p>
                       <p>There are numerous choices when it comes to the kind of accommodation you can rent or buy, such as
                         houses, apartments, or house shares. House shares (renting a private bedroom in a shared house), are a
                         very common option in Ireland, especially for single people in larger cities where demand and rents are
