--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <link href="assets/css/lightbox.css" rel="stylesheet"/>
     <link href="assets/css/style.css" rel="stylesheet"/>
   </head>
-  <body ng-app="thankam">
+  <body ng-app="slaeire">
 
       <div style="z-index:99999" class="container-fluid">
                       <div id="sm-menu" class="menu-sd">
@@ -309,49 +309,47 @@
                                 <strong class="mnt"><i class="fa fa-calendar"></i><script> document.write(new Date().toLocaleDateString()); </script></strong>
                                  <a class="comment" href="https://www.breakingnews.ie/" target="_blank"><i class="fa fa-eye"></i> view more  </a>
                             </div>
-
-
-                          <script type="text/javascript">
-                          <!--
-                          rssfeed_url = new Array();
-                          rssfeed_url[0]="https://feeds.breakingnews.ie/bntopstories?format=xml"; rssfeed_url[1]="https://www.irishtimes.com/rss/the-irish-times-news-1.1319192";
-                          rssfeed_frame_width="1100";
-                          rssfeed_frame_height="260";
-                          rssfeed_scroll="on";
-                          rssfeed_scroll_step="6";
-                          rssfeed_scroll_bar="off";
-                          rssfeed_target="_blank";
-                          rssfeed_font_size="12";
-                          rssfeed_font_face="";
-                          rssfeed_border="on";
-                          rssfeed_css_url="https://feed.surfing-waves.com/css/style6.css";
-                          rssfeed_title="on";
-                          rssfeed_title_name="";
-                          rssfeed_title_bgcolor="#3366ff";
-                          rssfeed_title_color="#fff";
-                          rssfeed_title_bgimage="";
-                          rssfeed_footer="off";
-                          rssfeed_footer_name="rss feed";
-                          rssfeed_footer_bgcolor="#fff";
-                          rssfeed_footer_color="#333";
-                          rssfeed_footer_bgimage="";
-                          rssfeed_item_title_length="50";
-                          rssfeed_item_title_color="#666";
-                          rssfeed_item_bgcolor="#fff";
-                          rssfeed_item_bgimage="";
-                          rssfeed_item_border_bottom="on";
-                          rssfeed_item_source_icon="off";
-                          rssfeed_item_date="off";
-                          rssfeed_item_description="on";
-                          rssfeed_item_description_length="120";
-                          rssfeed_item_description_color="#666";
-                          rssfeed_item_description_link_color="#333";
-                          rssfeed_item_description_tag="off";
-                          rssfeed_no_items="0";
-                          rssfeed_cache = "4f130ad32bb78d4af5d90b73d0e54821";
-                          //-->
-                          </script>
-                          <script type="text/javascript" src="https://feed.surfing-waves.com/js/rss-feed.js"></script>
+                        <script type="text/javascript">
+                        <!--
+                        rssfeed_url = new Array();
+                        rssfeed_url[0]="https://www.newsfirst.lk/feed/"; rssfeed_url[1]="https://lankacnews.com/feed"; rssfeed_url[2]="https://feeds.breakingnews.ie/bntopstories?format=xml";
+                        rssfeed_frame_width="1100";
+                        rssfeed_frame_height="260";
+                        rssfeed_scroll="on";
+                        rssfeed_scroll_step="6";
+                        rssfeed_scroll_bar="off";
+                        rssfeed_target="_blank";
+                        rssfeed_font_size="12";
+                        rssfeed_font_face="";
+                        rssfeed_border="on";
+                        rssfeed_css_url="https://feed.surfing-waves.com/css/style6.css";
+                        rssfeed_title="on";
+                        rssfeed_title_name="";
+                        rssfeed_title_bgcolor="#3366ff";
+                        rssfeed_title_color="#fff";
+                        rssfeed_title_bgimage="";
+                        rssfeed_footer="off";
+                        rssfeed_footer_name="rss feed";
+                        rssfeed_footer_bgcolor="#fff";
+                        rssfeed_footer_color="#333";
+                        rssfeed_footer_bgimage="";
+                        rssfeed_item_title_length="50";
+                        rssfeed_item_title_color="#666";
+                        rssfeed_item_bgcolor="#fff";
+                        rssfeed_item_bgimage="";
+                        rssfeed_item_border_bottom="on";
+                        rssfeed_item_source_icon="off";
+                        rssfeed_item_date="off";
+                        rssfeed_item_description="on";
+                        rssfeed_item_description_length="120";
+                        rssfeed_item_description_color="#666";
+                        rssfeed_item_description_link_color="#333";
+                        rssfeed_item_description_tag="off";
+                        rssfeed_no_items="0";
+                        rssfeed_cache = "27c7b06e9dbc90746290a6fcc84fb97a";
+                        //-->
+                        </script>
+                        <script type="text/javascript" src="https://feed.surfing-waves.com/js/rss-feed.js"></script>
 
 
 
